--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="nav-container">
             <ul class="nav-links">
-                <li class="logo"><a href="welcome page.html">[Name]</a></li>
+                <li class="logo"><a href="index.html">[Name]</a></li>
                 <li><a href="selectionpage.html">home page</a></li>
                 <li><a href="aboutus.html">about namers</a></li>
                 <li><a href="getintouch.html">tell us your cool spots</a></li>
