--- a/selectionpage.html
+++ b/selectionpage.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul class="nav-links">
-            <li class="logo"><a href="welcome page.html">[Name]</a></li>
+            <li class="logo"><a href="index.html">[Name]</a></li>
             <li><a href="selectionpage.html">home page</a></li>
             <li><a href="aboutus.html">about namers</a></li>
             <li><a href="getintouch.html">tell us your cool spots</a></li>
